cluster/apps/databases/influxdb/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb2
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: influxdb.kng.house
spec:
  ingressClassName: nginx
  rules:
    - host: influxdb.kng.house
      http:
        paths:
          - path: "/"
            pathType: Prefix
          - backend:
              serviceName: influxdb2
              servicePort: http
  tls:
    - hosts:
        - influxdb.kng.house
